@@ -24,7 +24,6 @@
 package com.synopsys.integration.alert.provider.blackduck.descriptor;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
@@ -71,7 +70,7 @@ public class BlackDuckDescriptor extends ProviderDescriptor {
 
     @Override
     public Collection<DefinedFieldModel> getDefinedFields(final ConfigContextEnum context) {
-        if (ConfigContextEnum.GLOBAL == context) {
+        if (ConfigContextEnum.GLOBAL.equals(context)) {
             final DefinedFieldModel blackDuckUrl = DefinedFieldModel.createGlobalField(KEY_BLACKDUCK_URL);
             final DefinedFieldModel blackDuckApiKey = DefinedFieldModel.createGlobalField(KEY_BLACKDUCK_API_KEY);
             final DefinedFieldModel blackDuckTimeout = DefinedFieldModel.createGlobalField(KEY_BLACKDUCK_TIMEOUT);
@@ -80,12 +79,12 @@ public class BlackDuckDescriptor extends ProviderDescriptor {
             final DefinedFieldModel blackDuckProxyUsername = DefinedFieldModel.createGlobalField(KEY_BLACKDUCK_PROXY_USERNAME);
             final DefinedFieldModel blackDuckProxyPassword = DefinedFieldModel.createGlobalSensitiveField(KEY_BLACKDUCK_PROXY_PASS);
             return List.of(blackDuckUrl, blackDuckApiKey, blackDuckTimeout, blackDuckProxyHost, blackDuckProxyPort, blackDuckProxyUsername, blackDuckProxyPassword);
-        } else if (ConfigContextEnum.DISTRIBUTION == context) {
+        } else if (ConfigContextEnum.DISTRIBUTION.equals(context)) {
             final DefinedFieldModel filterByProject = DefinedFieldModel.createDistributionField(KEY_FILTER_BY_PROJECT);
             final DefinedFieldModel projectNamePattern = DefinedFieldModel.createDistributionField(KEY_PROJECT_NAME_PATTERN);
             final DefinedFieldModel configuredProject = DefinedFieldModel.createDistributionField(KEY_CONFIGURED_PROJECT);
             return List.of(filterByProject, projectNamePattern, configuredProject);
         }
-        return Collections.emptyList();
+        return List.of();
     }
 }
